[gd_scene load_steps=5 format=2]

[ext_resource path="res://other/Level.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Scene 03.gd" type="Script" id=2]
[ext_resource path="res://objects/Platform.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/Wall.tscn" type="PackedScene" id=4]

[node name="Level" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Active" parent="." index="0"]
editor/display_folded = true

[node name="Ball" parent="Active" index="0"]
position = Vector2( 300, 480 )

[node name="Goal" parent="Active" index="1"]
position = Vector2( 800, 466 )

[node name="Objects" parent="." index="1"]
editor/display_folded = true

[node name="Platform2" parent="Objects" index="0" instance=ExtResource( 3 )]
position = Vector2( 800, 520 )

[node name="Platform" parent="Objects" index="1" instance=ExtResource( 3 )]
position = Vector2( 300, 520 )

[node name="Wall" parent="Objects" index="2" instance=ExtResource( 4 )]
position = Vector2( 540, 460 )

[node name="Wall2" parent="Objects" index="3" instance=ExtResource( 4 )]
position = Vector2( 540, 413 )

[node name="Platform3" parent="Objects" index="4" instance=ExtResource( 3 )]
position = Vector2( 752, 520 )
